tests/should-pass/type-checking/r.implicitValTyVar.fk
-- #desc   Type-checking error
-- #return unit

test: {List X -> List X}
test x = x

main: {Unit}
main! = unit
